--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "editor.linkedEditing": true
+  "editor.linkedEditing": true,
+  "editor.formatOnSave": true,
+  "prettier.htmlWhitespaceSensitivity": "ignore"
 }
